--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mantine/core": "^6.0.0",
+    "@mantine/dates": "^6.0.0",
     "@mantine/form": "^6.0.0",
     "@mantine/hooks": "^6.0.0",
     "@mantine/modals": "^6.0.0",
     "@mantine/notifications": "^6.0.0",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.4",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.9.3",
+    "sass": "^1.58.3",
+    "tsparticles": "^2.9.3",
+    "yup": "^1.0.2",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
